2004-07-06  Stefan Jahn  <stefan@lkcc.org>

	* spsolver.cpp: Removed some of the noise debug messages and
	optimized 'sqr (abs (x))' to be 'norm (x)'.

	* equation.cpp: Exporting simple matrices as well.

2004-07-05  Stefan Jahn  <stefan@lkcc.org>

	* scan_netlist.l: Changed the scanner appropriately for the
	new parser functionality.

	* parse_netlist.y: New application 'array' implemented which
	can do indexing array-like structures.

	* exception.h, exceptionstack.h: Put exception and 
	exceptionstack classes into the qucs:: namespace to avoid name
	clashes with standard C++ classes.  Changed all callers.

	* evaluate.cpp: Implemented 'array' functionality for
	indexing vectors, matrices and matrix vectors.

	* equation.cpp: Implemented usage of matrices.  Also added
	support for matrix, vector and matrix vector indices.
	Fixed a bug when accessing results in argument lists (the
	expression lists).  Exporting matrix vectors correctly now.

2004-07-04  Stefan Jahn  <stefan@lkcc.org>

	* matvec.cpp: When get()'ting a vector from a matrix vector
	it gets named as well based on the matrix vectors name and the
	appropriate indices.

	* equation.cpp: Matrix vectors can now also be exported into
	the dataset.

	* dataset.cpp: Added some functionality which allows the
	programmer to pass chains of data vectors to the dataset.

	* spsolver.cpp: Remove unnecessary local variables.

	* evaluate.cpp: Implemented example matrix vector operation
	for testing.

	* equation.cpp: Added some functionality which is able to
	detect matrix vectors in datasets.  These matrix vectors will
	be available in the equations set.  Still something to do...

	* matvec.h (class matvec): Added some basic operations on
	matrix vectors.

2004-07-03  Michael Margraf <michael.margraf@alumni.tu-berlin.de>

	* fixed all bugs in s-parameter noise analysis.

2004-07-03  Stefan Jahn  <stefan@lkcc.org>

	* scan_netlist.l: Fixed bug when writing simply 'j' or 'i' with
	no trailing number.
