@@ -238,6 +238,7 @@
  title   = "{Measurement and Computer-Aided Modeling of Microstrip 
              Discontinuities by an Improved Resonator Method}",
  journal = SMTT,
+ month   = may,
  year    = {1983},
  pages   = {495-497},
  local   = "{01130959.pdf}",
@@ -398,13 +399,14 @@
 }
 
 @article{Kirschning4,
- author  = {M. Kirschning, R. H. Jansen, N. H. L. Koster},
- title   = "{Measurement and Computer-Aided Modeling of Microstrip Discontinuities
-             by an Improved Resonator Method}",
+ author  = {M. Kirschning and R. H. Jansen and N. H. L. Koster},
+ title   = "{Measurement and Computer-Aided Modeling of Microstrip
+             Discontinuities by an Improved Resonator Method}",
  journal = IEEEMTTSdig,
  month   = may,
  year    = {1983},
  pages   = {495-497},
+ local   = "{01130959.pdf}",
 }
 
 @article{Wedge,
